fix(traits/access/accessControl.tact): map handling and logic(add _initRole)

--- a/package.json
+++ b/package.json
@@ -1,16 +1,29 @@
 {
     "name": "opengem-contracts",
-    "author": {"name": "zig balthazar","email": "zigbalthazar@gmail.com"},
-    "contributors": [{"name": "zig balthazar","email": "zigbalthazar@gmail.com"},{"name": "Kayhan Alizadeh","email": "kehiiiiya@gmail.com"}],
+    "author": {
+        "name": "zig balthazar",
+        "email": "zigbalthazar@gmail.com"
+    },
+    "contributors": [
+        {
+            "name": "zig balthazar",
+            "email": "zigbalthazar@gmail.com"
+        },
+        {
+            "name": "Kayhan Alizadeh",
+            "email": "kehiiiiya@gmail.com"
+        }
+    ],
     "version": "0.0.1",
     "description": "Secure Smart Contract library for Tact",
     "files": [
         "/contracts/traits/**/*.tact",
         "!/contracts/mocks/**/*"
-      ],
+    ],
     "scripts": {
         "build:all": "blueprint build --all",
-        "test": "jest --verbose"
+        "test": "jest --verbose",
+        "format":"npx prettier -w ."
     },
     "devDependencies": {
         "@ton/blueprint": "^0.21.0",
