--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -26,6 +26,8 @@ jobs:
 
     - name: Install dependencies
       run: npm ci
+    - name: Build contracts
+      run: npm run build:all
 
     - name: Run BluePrint tests
       run: npm test
