chore: rename project on package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "opengem-contracts",
+    "name": "tonion-contracts",
     "author": {
         "name": "zig balthazar",
         "email": "zigbalthazar@gmail.com"
